--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.6.0",
     "helmet": "^6.0.0",
+    "nodemailer": "^6.8.0",
     "sqlite3": "^5.1.2"
   }
 }
