--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
-    "nodemailer": "^6.8.0"
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.6.0",
+    "helmet": "^6.0.0",
+    "nodemailer": "^6.8.0",
+    "request": "^2.88.2",
+    "sqlite3": "^5.1.2"
   }
 }
